--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,16 +16,22 @@
 		"@sveltejs/kit": "^2.16.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
 		"@tailwindcss/vite": "^4.0.0",
+		"autoprefixer": "^10.4.20",
+		"postcss": "^8.5.3",
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.11",
 		"svelte": "^5.0.0",
-		"tailwindcss": "^4.0.0",
+		"svelte-preprocess": "^6.0.3",
+		"tailwindcss": "^4.0.9",
 		"vite": "^6.0.0"
 	},
 	"pnpm": {
 		"onlyBuiltDependencies": [
 			"esbuild"
 		]
+	},
+	"dependencies": {
+		"lucide-svelte": "^0.477.0"
 	}
 }
