Changing from pnpm to bun

--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,35 +1,23 @@
-# Node modules
-*node_modules/
+node_modules
 
-# Build output
-build/
+# Output
+.output
+.vercel
+.netlify
+.wrangler
+/.svelte-kit
+/build
 
-# Dependency directories
-.svelte-kit/
-.svelte/
-
-# Local environment settings
-.env
-.env.local
-
-# Logs
-*.log
-
-# Operating System files
+# OS
 .DS_Store
 Thumbs.db
 
-# IDE/Editor files
+# Env
+.env
+.env.*
+!.env.example
+!.env.test
 
-.idea/
-*.swp
-
-# SvelteKit adapter and static site output
-.svelte-kit/
-.svelte-kit/
-
-# Optional: if using test framework
-coverage/
-
-# npm debug file
-npm-debug.log*
+# Vite
+vite.config.js.timestamp-*
+vite.config.ts.timestamp-*
