--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2024"
 [dependencies]
 tokio = { version = "1", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
+tower-http = { version = "0.6.2", features = ["cors"] }
 axum = "0.8.1"
 dotenv = "0.15.0"
