--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -19,3 +19,4 @@ bcrypt = "0.17.0"
 jsonwebtoken = "9.3.1"
 chrono = "0.4.40"
 time = "0.3.41"
+axum-extra = {version = "0.10.1", features=["cookie"]}
